@@ -1,8 +1,8 @@
-# Makefile for the Paravel Ubuntu 22.04 repo
+# Makefile for the Paravel Ubuntu 24.04 repo
 
 #SHELL := /bin/bash
 
-REPO_KEY = "Paravel Ubuntu 22.04 Test"
+REPO_KEY = "Paravel Ubuntu 24.04 Repo"
 
 
 sign:	clean sane
@@ -12,10 +12,10 @@ sign:	clean sane
 	apt-ftparchive release . > Release
 	gpg --default-key $(REPO_KEY) -abs -o Release.gpg Release
 	gpg --default-key $(REPO_KEY) --clearsign -o InRelease Release
-	gpg --export $(REPO_KEY) > Paravel-Ubuntu-22.04-Test.gpg
+	gpg --export $(REPO_KEY) > Paravel-Ubuntu-24.04-Repo.gpg
 
 post:	sane
-	rsync -rptgoDv --copy-links --delete --exclude Makefile --exclude sanity_check.sh . software.paravelsystems.com::ubuntu_jammy/
+	rsync -rptgoDv --copy-links --delete --exclude Makefile --exclude sanity_check.sh . software.paravelsystems.com::ubuntu_noble/
 
 sane:	
 	./sanity_check.sh  
