@@ -222,3 +222,6 @@
 	* Tweaked language in the installation documentation.
 2024-05-01 Fred Gleason <fredg@paravelsystems.com>
 	* Updated the installation HOWTO.
+2024-05-01 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed references to Ubuntu 22.04 Jammy Jellyfish to point to
+	Ubuntu 24.04 Noble Numbat.
